# test_llm_visualization

./: .editorconfig  .env.example  .gitignore  ACCEPTANCE_TEST.md  BACKEND_TESTS_IMPLEMENTATION.md  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  DOCKER_DEPLOYMENT.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_FIX_SUMMARY.md  FILES_CREATED.md  FORWARD_TRACING.md  FORWARD_TRACING_IMPLEMENTATION.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_v1.1.md  MICRO_INSPECTORS.md  MODEL_OVERVIEW.md  MOE_IMPLEMENTATION_CHECKLIST.md  NEW_UI_README.md  OUTPUT_LAYER_CHECKLIST.md  PERFORMANCE_OPTIMIZATION.md  QUICKSTART.md  README.md  README_zh.md  TASK_COMPLETION.md  TEST_CHECKLIST.md  TICKET_MODEL_OVERVIEW.md  TICKET_SUMMARY.md  USAGE.md  diagnose-docker.sh  docker-compose.frontend.yml  docker-compose.yml  sample-api-payload.json  setup.sh  start-dev.sh  test-frontend.sh  test-inspectors.sh  test-model-overview.sh  (+3 more)
backend/: .dockerignore  .env.example  .gitignore  API_README.md  Dockerfile  IMPLEMENTATION_SUMMARY_v2.0.md  MOE_INTEGRATION_README.md  README.md  README_Transformer.md  SPARSE_ATTENTION_README.md  TEST_SUMMARY.md  demo_moe_integration.py  demo_sparse_attention.py  main.py  moe_api.py  pyproject.toml  requirements.txt  test_api.py  test_capture_container.py  test_capture_simple.py  test_moe_basic.py  test_moe_unit.py  test_sparse_attention.py  test_transformer_unit.py  validate_moe_integration.py  verify_implementation.py
backend/app/: __init__.py  main.py  model.py  models.py  streaming.py  tokenizer.py  utils.py
backend/app/api/: routes.py
backend/app/core/: __init__.py  config.py  dependencies.py  middleware.py
backend/app/models/: __init__.py  request.py  response.py
backend/app/models/transformer/: __init__.py  attention.py  block.py  config.py  embeddings.py  factory.py  mlp.py  model.py  moe.py  sparse_attention.py
backend/app/routers/: __init__.py  health.py  model.py
backend/app/schemas/: __init__.py  api.py  common.py  forward_capture.py
backend/app/services/: __init__.py  embedding.py  forward_capture.py  health.py  inference.py  moe.py  sparse_attention.py  tokenizer.py  transformer.py
backend/app/utils/: config.py  sparse_mask.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_forward_tracing.py  test_main.py  test_model_api.py  test_model_utils.py  test_serialization.py
deploy/: .env.example  DEPLOYMENT_SUMMARY.md  README.md  docker-compose.yml  quick-start.sh  test-deployment.sh
docs/: README.md  api-reference.md  data-structures.md  deployment-guide.md  moe-design.md  sparse-attention.md
frontend/: .dockerignore  D3_VISUALIZATION_IMPLEMENTATION.md  Dockerfile  Dockerfile.temp  IMPLEMENTATION_SUMMARY.md  SETUP.md  (+25 more)
(+120 files in other folders)
